tests/paczka1/fuzzy1/67373657.err
Error in line 10: 0rloD A43 54,9
Error in line 15: 0rloD S458 30,1
Error in line 23: 0rloD A43 43,0
Error in line 24: K27I A43 44,9
Error in line 30: tnIJx9 S458 3,8
Error in line 35: yrr A43 99,9
Error in line 26: 0rloD S458 96,5
